# qnap-cli

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
qnap_cli/: __init__.py  __main__.py
src/: client.rs  config.rs  main.rs  output.rs
src/commands/: config_show.rs  dump.rs  files.rs  info.rs  login.rs  mod.rs  network.rs  schema.rs  shares.rs  status.rs  volumes.rs
tests/: e2e.sh
tests/fixtures/ts-xa28a-qts52/: files-root.json  files-share.json  meta.toml  shares.json  sysinfo.xml  volumes.xml
