[package]
name = "qnap"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI for QNAP NAS management — human-friendly output and JSON mode for agent use"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/qnap-cli"
homepage = "https://github.com/rvben/qnap-cli"
readme = "README.md"
keywords = ["qnap", "nas", "cli", "storage", "management"]
categories = ["command-line-utilities"]
exclude = [".github", "target"]

[dev-dependencies]
wiremock = "0.6"

[[bin]]
name = "qnap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
owo-colors = "4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.17", features = ["ansi"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
