[package]
name = "qnap"
version = "0.1.5"
edition = "2024"
rust-version = "1.85"
description = "CLI for QNAP NAS management — human-friendly output and JSON mode for agent use"
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/qnap-cli"
homepage = "https://github.com/rvben/qnap-cli"
readme = "README.md"
keywords = ["qnap", "nas", "cli", "storage", "management"]
categories = ["command-line-utilities"]
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "Makefile",
]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[[bin]]
name = "qnap"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
owo-colors = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "charset", "multipart", "stream"] }
rpassword = "7"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.17", features = ["ansi"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
